# mediapipe-rs

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  build.rs  mediapipe
examples/: face_mesh.rs  hand_tracking.rs  hand_tracking_nodisp.rs  hello.rs  holistic_tracking.rs  multi_person_holistic_tracking.rs  multi_pose_estimation.rs  pose_estimation.rs  segmentation.rs
src/: bindings.rs  face_mesh.rs  hands.rs  holistic.rs  lib.rs  pose.rs  segmentation.rs
src/graphs/: face_mesh_desktop_live.pbtxt  holistic_tracking_cpu.pbtxt  multi_person_pose_tracking_cpu.pbtxt
