[package]
name = "mediapipe"
version = "0.1.0"
# documentation = "https://docs.rs/ux-mediapipe"
description = "Rusty bindings for Google mediapipe"
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mediapipe"

[dependencies]
cgmath = "0.18"
libc = "0.2"
opencv = "0.66"
protobuf = "2.23"

[build-dependencies]
bindgen = "*"
