[package]
name = "mediapipe"
version = "0.1.0"
# documentation = "https://docs.rs/ux-mediapipe"
description = "Rusty bindings for Google mediapipe"
license = "MPL-2.0"
edition = "2018"
links = "mediapipe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mediapipe"

[dependencies]
cgmath = "0.18"
libc = "0.2"
opencv = { version = "0.88", features = ["clang-runtime"] }
protobuf = "3.3"

[build-dependencies]
bindgen = "0.69"
